@@ -14,24 +14,29 @@ import static com.sapo.shipping.auth.permission.Permission.*;
 
 @RequiredArgsConstructor
 public enum Role {
-//    ADMIN,COORDINATOR,SHIPPER,SHOP
-    ADMIN(Collections.emptySet())
-    ,
-    COORDINATOR(Collections.emptySet()),
-    SHIPPER(Collections.emptySet()),
-    SHOP(Collections.emptySet())
+    ADMIN,COORDINATOR,SHIPPER,SHOP
+//    ADMIN( Set.of(
+//        ADMIN_READ,
+//        ADMIN_UPDATE,
+//        ADMIN_DELETE,
+//        ADMIN_CREATE
+//))
+//    ,
+//    COORDINATOR(Collections.emptySet()),
+//    SHIPPER(Collections.emptySet()),
+//    SHOP(Collections.emptySet())
+//
+//    ;
 
-    ;
+//    @Getter
+//    private final Set<Permission> permissions;
 
-    @Getter
-    private final Set<Permission> permissions;
-
-    public List<SimpleGrantedAuthority> getAuthorities() {
-        var authorities = getPermissions()
-                .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-                .collect(Collectors.toList());
-        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-        return authorities;
-    }
+//    public List<SimpleGrantedAuthority> getAuthorities() {
+//        var authorities = getPermissions()
+//                .stream()
+//                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+//                .collect(Collectors.toList());
+//        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+//        return authorities;
+//    }
 }
